# school-accident-dashboard-v4

./: .gitignore  README.md  V4_DESIGN_SPEC.md  app.py  chool safety dashboard v4  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: style.css
components/: cards.py  charts.py  filters.py  layout.py  sankey.py
data/: sample.csv
pages/: 1_오늘의_학교안전상황.py  2_학교지도.py  3_사고분석.py
utils/: color.py  helper.py  loader.py  preprocess.py
