[project]
name = "school-accident-dashboard-v4"
version = "0.2.0"
description = "사고경로 중심 학교안전 Streamlit UI 프로토타입"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.39",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.24",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]
